Change mappings, endpoints, add findUserId